# Robot-Framework

./: .pabotsuitenames  log.html  output.xml  pyproject.toml  report.html
pabot_results/0/: output.xml  robot_stdout.out
pabot_results/1/: output.xml  robot_stdout.out
pabot_results/2/: output.xml  robot_stdout.out
pabot_results/3/: output.xml  robot_stdout.out
pabot_results/4/: output.xml  robot_stdout.out
pabot_results/5/: output.xml  robot_stdout.out
resources/: demoqa_variables.resource  keywords.resource
soucedemo/: __init__.robot  sample_test.robot
soucedemo/login/: __init__.robot  test.robot
tests/: bdd_test.robot  datadriven_test.robot  failed_test.robot  login_test.robot  tag_test.robot  template_test.robot  variables_test.robot
